grammar/grammar.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root) {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Start: peg$parseStart },
        peg$startRuleFunction  = peg$parseStart,

        peg$c0 = "please",
        peg$c1 = peg$literalExpectation("please", false),
        peg$c2 = function(command) { return command },
        peg$c3 = "an",
        peg$c4 = peg$literalExpectation("an", false),
        peg$c5 = "a",
        peg$c6 = peg$literalExpectation("a", false),
        peg$c7 = "set",
        peg$c8 = peg$literalExpectation("set", false),
        peg$c9 = "if",
        peg$c10 = peg$literalExpectation("if", false),
        peg$c11 = "repeat",
        peg$c12 = peg$literalExpectation("repeat", false),
        peg$c13 = "comparison",
        peg$c14 = peg$literalExpectation("comparison", false),
        peg$c15 = "math",
        peg$c16 = peg$literalExpectation("math", false),
        peg$c17 = "arithmetic",
        peg$c18 = peg$literalExpectation("arithmetic", false),
        peg$c19 = "print",
        peg$c20 = peg$literalExpectation("print", false),
        peg$c21 = "text",
        peg$c22 = peg$literalExpectation("text", false),
        peg$c23 = "number",
        peg$c24 = peg$literalExpectation("number", false),
        peg$c25 = "variable",
        peg$c26 = peg$literalExpectation("variable", false),
        peg$c27 = "put",
        peg$c28 = peg$literalExpectation("put", false),
        peg$c29 = "turn",
        peg$c30 = peg$literalExpectation("turn", false),
        peg$c31 = "pen",
        peg$c32 = peg$literalExpectation("pen", false),
        peg$c33 = "color",
        peg$c34 = peg$literalExpectation("color", false),
        peg$c35 = "move",
        peg$c36 = peg$literalExpectation("move", false),
        peg$c37 = function(block, where) { return {
          "action": "put",
          "blockId": block,
          "where": where
        } },
        peg$c38 = "block",
        peg$c39 = peg$literalExpectation("block", false),
        peg$c40 = function(type) { return type },
        peg$c41 = function(number) { return number },
        peg$c42 = function(position, block) { return {
          "blockId": block,
          "position": position
        } },
        peg$c43 = "inside of",
        peg$c44 = peg$literalExpectation("inside of", false),
        peg$c45 = "above",
        peg$c46 = peg$literalExpectation("above", false),
        peg$c47 = "before",
        peg$c48 = peg$literalExpectation("before", false),
        peg$c49 = function() { return "before" },
        peg$c50 = "below",
        peg$c51 = peg$literalExpectation("below", false),
        peg$c52 = "after",
        peg$c53 = peg$literalExpectation("after", false),
        peg$c54 = function() { return "after" },
        peg$c55 = "to",
        peg$c56 = peg$literalExpectation("to", false),
        peg$c57 = "into",
        peg$c58 = peg$literalExpectation("into", false),
        peg$c59 = "the",
        peg$c60 = peg$literalExpectation("the", false),
        peg$c61 = "first blank",
        peg$c62 = peg$literalExpectation("first blank", false),
        peg$c63 = "first field",
        peg$c64 = peg$literalExpectation("first field", false),
        peg$c65 = "lefthand side",
        peg$c66 = peg$literalExpectation("lefthand side", false),
        peg$c67 = "left",
        peg$c68 = peg$literalExpectation("left", false),
        peg$c69 = "of",
        peg$c70 = peg$literalExpectation("of", false),
        peg$c71 = function() { return "lhs" },
        peg$c72 = "second blank",
        peg$c73 = peg$literalExpectation("second blank", false),
        peg$c74 = "second field",
        peg$c75 = peg$literalExpectation("second field", false),
        peg$c76 = "last field",
        peg$c77 = peg$literalExpectation("last field", false),
        peg$c78 = "last blank",
        peg$c79 = peg$literalExpectation("last blank", false),
        peg$c80 = "righthand side",
        peg$c81 = peg$literalExpectation("righthand side", false),
        peg$c82 = "right",
        peg$c83 = peg$literalExpectation("right", false),
        peg$c84 = function() { return "rhs" },
        peg$c85 = "at",
        peg$c86 = peg$literalExpectation("at", false),
        peg$c87 = "top",
        peg$c88 = peg$literalExpectation("top", false),
        peg$c89 = function() { return "top" },
        peg$c90 = /^[0-9]/,
        peg$c91 = peg$classExpectation([["0", "9"]], false, false),
        peg$c92 = function(digits) { return parseInt(digits.join(""), 10); },
        peg$c93 = /^[a-zA-Z]/,
        peg$c94 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
        peg$c95 = function(value) { return value.join("") },
        peg$c96 = " ",
        peg$c97 = peg$literalExpectation(" ", false),
        peg$c98 = function(car, w) { return w },
        peg$c99 = function(car, cdr) { return [car].concat(cdr).join(" ") },
        peg$c100 = "in block",
        peg$c101 = peg$literalExpectation("in block", false),
        peg$c102 = peg$anyExpectation(),
        peg$c103 = function(car, cdr) { return [car].concat(cdr.join("")).join("").replace(new RegExp(",","g"),"").trim()  },
        peg$c104 = "add",
        peg$c105 = peg$literalExpectation("add", false),
        peg$c106 = function(type) { return {
          "action": "add",
          "type": type,
        } },
        peg$c107 = "called",
        peg$c108 = peg$literalExpectation("called", false),
        peg$c109 = "named",
        peg$c110 = peg$literalExpectation("named", false),
        peg$c111 = "delete",
        peg$c112 = peg$literalExpectation("delete", false),
        peg$c113 = "all",
        peg$c114 = peg$literalExpectation("all", false),
        peg$c115 = function(block) { return {
          "action": "delete",
          "blockId": block
        } },
        peg$c116 = "change",
        peg$c117 = peg$literalExpectation("change", false),
        peg$c118 = "",
        peg$c119 = "in",
        peg$c120 = peg$literalExpectation("in", false),
        peg$c121 = function(ordinal, property, block, value) { return {
          "action": "modify",
          "property": property,
          "value": value,
          "blockId": block,
          "ordinal": ordinal
        } },
        peg$c122 = "first",
        peg$c123 = peg$literalExpectation("first", false),
        peg$c124 = "second",
        peg$c125 = peg$literalExpectation("second", false),
        peg$c126 = "third",
        peg$c127 = peg$literalExpectation("third", false),
        peg$c128 = function(ord) { return ord },
        peg$c129 = "modify",
        peg$c130 = peg$literalExpectation("modify", false),
        peg$c131 = "variable name",
        peg$c132 = peg$literalExpectation("variable name", false),
        peg$c133 = "name",
        peg$c134 = peg$literalExpectation("name", false),
        peg$c135 = function(value) { return {
          "property": "operation",
          "value": value
        } },
        peg$c136 = "operation",
        peg$c137 = peg$literalExpectation("operation", false),
        peg$c138 = "operator",
        peg$c139 = peg$literalExpectation("operator", false),
        peg$c140 = function() { return "operation" },
        peg$c141 = "addition",
        peg$c142 = peg$literalExpectation("addition", false),
        peg$c143 = "plus",
        peg$c144 = peg$literalExpectation("plus", false),
        peg$c145 = function() { return "+" },
        peg$c146 = "subtract",
        peg$c147 = peg$literalExpectation("subtract", false),
        peg$c148 = "minus",
        peg$c149 = peg$literalExpectation("minus", false),
        peg$c150 = "subtraction",
        peg$c151 = peg$literalExpectation("subtraction", false),
        peg$c152 = function() { return "-" },
        peg$c153 = "multiply",
        peg$c154 = peg$literalExpectation("multiply", false),
        peg$c155 = "times",
        peg$c156 = peg$literalExpectation("times", false),
        peg$c157 = "multiplication",
        peg$c158 = peg$literalExpectation("multiplication", false),
        peg$c159 = function() { return "*" },
        peg$c160 = "divide",
        peg$c161 = peg$literalExpectation("divide", false),
        peg$c162 = "division",
        peg$c163 = peg$literalExpectation("division", false),
        peg$c164 = function() { return "/" },
        peg$c165 = "power",
        peg$c166 = peg$literalExpectation("power", false),
        peg$c167 = "exponentiation",
        peg$c168 = peg$literalExpectation("exponentiation", false),
        peg$c169 = function() { return "^" },
        peg$c170 = "variable name to",
        peg$c171 = peg$literalExpectation("variable name to", false),
        peg$c172 = function(name) { return {
          "property": "name",
          "value": name
        } },
        peg$c173 = function(comparison) { return {
          "property": "comparison",
          "value": comparison
        } },
        peg$c174 = "equals",
        peg$c175 = peg$literalExpectation("equals", false),
        peg$c176 = function() { return "==" },
        peg$c177 = "not equals",
        peg$c178 = peg$literalExpectation("not equals", false),
        peg$c179 = "not equal to",
        peg$c180 = peg$literalExpectation("not equal to", false),
        peg$c181 = function() { return "!=" /** this doesn't work yet :( */},
        peg$c182 = "greater than or equal to",
        peg$c183 = peg$literalExpectation("greater than or equal to", false),
        peg$c184 = function() { return ">=" },
        peg$c185 = "less than or equal to",
        peg$c186 = peg$literalExpectation("less than or equal to", false),
        peg$c187 = function() { return "<=" },
        peg$c188 = "greater than",
        peg$c189 = peg$literalExpectation("greater than", false),
        peg$c190 = function() { return ">" },
        peg$c191 = "less than",
        peg$c192 = peg$literalExpectation("less than", false),
        peg$c193 = function() { return "<" },
        peg$c194 = function(number) { return {
          "property": "number",
          "value": number
        } },
        peg$c195 = function(text) { return {
          "property": "text",
          "value": text
        } },
        peg$c196 = function(text) { return {
          "property": "value",
          "value": text
        } },
        peg$c197 = "field",
        peg$c198 = peg$literalExpectation("field", false),
        peg$c199 = "middle",
        peg$c200 = peg$literalExpectation("middle", false),
        peg$c201 = "blank",
        peg$c202 = peg$literalExpectation("blank", false),
        peg$c203 = "value",
        peg$c204 = peg$literalExpectation("value", false),
        peg$c205 = "property",
        peg$c206 = peg$literalExpectation("property", false),
        peg$c207 = "run the program",
        peg$c208 = peg$literalExpectation("run the program", false),
        peg$c209 = function() { return {
          "action": "run"
        } },
        peg$c210 = "undo",
        peg$c211 = peg$literalExpectation("undo", false),
        peg$c212 = function() { return {
          "action": "undo"
        } },
        peg$c213 = "redo",
        peg$c214 = peg$literalExpectation("redo", false),
        peg$c215 = function() { return {
          "action": "redo"
        } },
        peg$c216 = "from",
        peg$c217 = peg$literalExpectation("from", false),
        peg$c218 = "and",
        peg$c219 = peg$literalExpectation("and", false),
        peg$c220 = function(block) { return {
          "action": "separate",
          "blockId": block
        } },
        peg$c221 = "menu",
        peg$c222 = peg$literalExpectation("menu", false),
        peg$c223 = "toolbox",
        peg$c224 = peg$literalExpectation("toolbox", false),
        peg$c225 = function(actionType, menuName) { return {
          "action": "menu",
          "actionType": actionType,
          "menu": menuName
        } },
        peg$c226 = "open",
        peg$c227 = peg$literalExpectation("open", false),
        peg$c228 = "close",
        peg$c229 = peg$literalExpectation("close", false),
        peg$c230 = "separate",
        peg$c231 = peg$literalExpectation("separate", false),
        peg$c232 = "go to the",
        peg$c233 = peg$literalExpectation("go to the", false),
        peg$c234 = "next level",
        peg$c235 = peg$literalExpectation("next level", false),
        peg$c236 = function() { return {
          "action": "next"
        } },
        peg$c237 = "stay on this level",
        peg$c238 = peg$literalExpectation("stay on this level", false),
        peg$c239 = function() { return {
          "action": "stay"
        } },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseStart() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 6) === peg$c0) {
        s1 = peg$c0;
        peg$currPos += 6;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsePut();
          if (s3 === peg$FAILED) {
            s3 = peg$parseAdd();
            if (s3 === peg$FAILED) {
              s3 = peg$parseDelete();
              if (s3 === peg$FAILED) {
                s3 = peg$parseChange();
                if (s3 === peg$FAILED) {
                  s3 = peg$parseRun();
                  if (s3 === peg$FAILED) {
                    s3 = peg$parseUndo();
                    if (s3 === peg$FAILED) {
                      s3 = peg$parseRedo();
                      if (s3 === peg$FAILED) {
                        s3 = peg$parseSeparate();
                        if (s3 === peg$FAILED) {
                          s3 = peg$parseMenu();
                          if (s3 === peg$FAILED) {
                            s3 = peg$parseNext();
                            if (s3 === peg$FAILED) {
                              s3 = peg$parseStay();
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c2(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseArticle() {
      var s0;

      if (input.substr(peg$currPos, 2) === peg$c3) {
        s0 = peg$c3;
        peg$currPos += 2;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 97) {
          s0 = peg$c5;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
      }

      return s0;
    }

    function peg$parseType() {
      var s0;

      if (input.substr(peg$currPos, 3) === peg$c7) {
        s0 = peg$c7;
        peg$currPos += 3;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }
      if (s0 === peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c9) {
          s0 = peg$c9;
          peg$currPos += 2;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s0 === peg$FAILED) {
          if (input.substr(peg$currPos, 6) === peg$c11) {
            s0 = peg$c11;
            peg$currPos += 6;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c12); }
          }
          if (s0 === peg$FAILED) {
            if (input.substr(peg$currPos, 10) === peg$c13) {
              s0 = peg$c13;
              peg$currPos += 10;
            } else {
              s0 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c14); }
            }
            if (s0 === peg$FAILED) {
              if (input.substr(peg$currPos, 4) === peg$c15) {
                s0 = peg$c15;
                peg$currPos += 4;
              } else {
                s0 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c16); }
              }
              if (s0 === peg$FAILED) {
                if (input.substr(peg$currPos, 10) === peg$c17) {
                  s0 = peg$c17;
                  peg$currPos += 10;
                } else {
                  s0 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c18); }
                }
                if (s0 === peg$FAILED) {
                  if (input.substr(peg$currPos, 5) === peg$c19) {
                    s0 = peg$c19;
                    peg$currPos += 5;
                  } else {
                    s0 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c20); }
                  }
                  if (s0 === peg$FAILED) {
                    if (input.substr(peg$currPos, 4) === peg$c21) {
                      s0 = peg$c21;
                      peg$currPos += 4;
                    } else {
                      s0 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c22); }
                    }
                    if (s0 === peg$FAILED) {
                      if (input.substr(peg$currPos, 6) === peg$c23) {
                        s0 = peg$c23;
                        peg$currPos += 6;
                      } else {
                        s0 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c24); }
                      }
                      if (s0 === peg$FAILED) {
                        if (input.substr(peg$currPos, 8) === peg$c25) {
                          s0 = peg$c25;
                          peg$currPos += 8;
                        } else {
                          s0 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c26); }
                        }
                        if (s0 === peg$FAILED) {
                          if (input.substr(peg$currPos, 3) === peg$c27) {
                            s0 = peg$c27;
                            peg$currPos += 3;
                          } else {
                            s0 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c28); }
                          }
                          if (s0 === peg$FAILED) {
                            if (input.substr(peg$currPos, 4) === peg$c29) {
                              s0 = peg$c29;
                              peg$currPos += 4;
                            } else {
                              s0 = peg$FAILED;
                              if (peg$silentFails === 0) { peg$fail(peg$c30); }
                            }
                            if (s0 === peg$FAILED) {
                              if (input.substr(peg$currPos, 3) === peg$c31) {
                                s0 = peg$c31;
                                peg$currPos += 3;
                              } else {
                                s0 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c32); }
                              }
                              if (s0 === peg$FAILED) {
                                if (input.substr(peg$currPos, 5) === peg$c33) {
                                  s0 = peg$c33;
                                  peg$currPos += 5;
                                } else {
                                  s0 = peg$FAILED;
                                  if (peg$silentFails === 0) { peg$fail(peg$c34); }
                                }
                                if (s0 === peg$FAILED) {
                                  if (input.substr(peg$currPos, 4) === peg$c35) {
                                    s0 = peg$c35;
                                    peg$currPos += 4;
                                  } else {
                                    s0 = peg$FAILED;
                                    if (peg$silentFails === 0) { peg$fail(peg$c36); }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsePut() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 3) === peg$c27) {
        s1 = peg$c27;
        peg$currPos += 3;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c28); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseBlockToken();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseBlockPosition();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c37(s3, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseBlockType() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseType();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 5) === peg$c38) {
            s3 = peg$c38;
            peg$currPos += 5;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c39); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c40(s1);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseBlockToken() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 5) === peg$c38) {
        s1 = peg$c38;
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c39); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseNumber();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c41(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseBlockPosition() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parsePosition();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseBlockToken();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c42(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsePosition() {
      var s0;

      s0 = peg$parseBefore();
      if (s0 === peg$FAILED) {
        s0 = peg$parseAfter();
        if (s0 === peg$FAILED) {
          s0 = peg$parseLeft();
          if (s0 === peg$FAILED) {
            s0 = peg$parseRight();
            if (s0 === peg$FAILED) {
              s0 = peg$parseTop();
              if (s0 === peg$FAILED) {
                if (input.substr(peg$currPos, 9) === peg$c43) {
                  s0 = peg$c43;
                  peg$currPos += 9;
                } else {
                  s0 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c44); }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseBefore() {
      var s0, s1;
